[package]
name = "vviz"
description = "Rapid prototyping GUI, and visual printf-style debugging for computer vision development"
documentation = "https://docs.rs/vviz"
edition = "2021"
homepage = "https://docs.rs/vviz"
keywords = ["gui", "vision", "image", "2d", "3d"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/strasdat/vviz/"
version = "0.2.1"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies] 
downcast-rs = "1.2.0"
egui = "0.16.0"
egui-miniquad = "0.8.0"
enum-as-inner = "0.3.3"
image = "0.23.14"
linked-hash-map = "0.5.4"
miniquad = { version = "=0.3.0-alpha.43" }
slice-of-array = "0.3.1"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
reqwest = {version = "0.11.8", features = ["blocking"] }
strum = "0.23"
strum_macros = "0.23.1"

[[example]]
name = "simple"

[[example]]
name = "interaction"

[[example]]
name = "multi_widgets"

[[example]]
name = "widget2"
