[package]
name = "vviz"
description = "Rapid prototyping GUI, and visual printf-style debugging for computer vision development"
documentation = "https://docs.rs/vviz"
edition = "2021"
homepage = "https://docs.rs/vviz"
keywords = ["gui", "vision", "image", "2d", "3d"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/strasdat/vviz/"
version = "0.3.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies] 
clap = { version = "3.0", features = ["derive"] }
downcast-rs = "1.2"
egui = "0.16"
egui-miniquad = "0.8"
enum_dispatch = "0.3.8"
enum-as-inner = "0.3"
image = "0.24"
linked-hash-map = "0.5"
miniquad = { version = "=0.3.0-alpha.43" }
slice-of-array = "0.3"
nalgebra = {version = "0.30", features = ["serde-serialize"]}
nalgebra-glm = "0.16"
reqwest = {version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
strum = "0.23"
strum_macros = "0.23"
tungstenite = "0.17.1"

[[example]]
name = "simple"

[[example]]
name = "interaction"

[[example]]
name = "multi_widgets"

[[example]]
name = "widget2"

[[bin]]
name = "remote_client"
path = "src/remote_client.rs"
